--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+find_package(Qt5Charts)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Quick)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Quick)
 
@@ -18,7 +19,7 @@ set(PROJECT_SOURCES
         main.cpp
         buffer.h buffer.cpp
         threadbuffer.h threadbuffer.cpp
-        consumer.h consumer.cpp
+        consumer.h consumer.cpp        
         qml.qrc
 )
 
@@ -46,7 +47,7 @@ else()
 endif()
 
 target_link_libraries(STC
-  PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick)
+  PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Quick Qt${QT_VERSION_MAJOR}::Charts)
 
 set_target_properties(STC PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
